--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -88,35 +88,15 @@
                       <li><a href="{% url 'about' %}">- About Us</a></li>
                       <li><a href="{% url 'service' %}">- Service</a></li>
                       <li><a href="{% url 'pricing' %}">- Pricing</a></li>
-                      <li><a href="{% url 'blog' %}">- Blog</a></li>
-                      <li><a href="{% url 'blogdetails' %}">- Blog Details</a></li>
+                   
                       <li><a href="{% url 'contact' %}">- Contact</a></li>
-                      <li><a href="#">- Dropdown</a>
-                        <ul class="dropdown">
-                          <li><a href="#">- Dropdown Item</a></li>
-                          <li><a href="#">- Dropdown Item</a>
-                            <ul class="dropdown">
-                              <li><a href="#">- Even Dropdown</a></li>
-                              <li><a href="#">- Even Dropdown</a></li>
-                              <li><a href="#">- Even Dropdown</a></li>
-                              <li><a href="#">- Even Dropdown</a></li>
-                            </ul>
-                          </li>
-                          <li><a href="#">- Dropdown Item</a></li>
-                          <li><a href="#">- Dropdown Item</a></li>
-                        </ul>
-                      </li>
+               
                     </ul>
                   </li>
                   <li><a href="{% url 'about' %}">About</a></li>
                   <li><a href="{% url 'service' %}">Service</a></li>
                   <li><a href="{% url 'pricing' %}">Pricing</a></li>
-                  <li><a href="{% url 'blog' %}">Blog</a>
-                    <ul class="dropdown">
-                      <li><a href="{% url 'blog' %}">- Blog</a></li>
-                      <li><a href="{% url 'blogdetails' %}">- Blog Details</a></li>
-                    </ul>
-                  </li>
+                 
                   <li><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
               </div>
@@ -156,13 +136,12 @@
       </div>
     </div>
   </div>
+  <br>
   <!-- ***** Breadcrumb Area End ***** -->
   {% if message_name %}
-<h3 class="text-center">Thanks{{ message_name }}
+<h3 class="text-center">Thanks {{ message_name }}</h3>
 <br>
-<br>
-We recived your email and will contact you shortly.
-</h3>
+<h2 class="text-center">We recived your email and will contact you shortly.</h2>
 {% endif %}
   <!-- ***** Contact Area Start ***** -->
   <section class="dento-contact-area mt-50 mb-100">
