--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -189,7 +189,7 @@
                   <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Name">
                 </div>
                 <div class="col-lg-6">
-                  <input type="email" name="message-email" class="form-control mb-30" placeholder="Your Email">
+                  <input type="text" name="message-name1" class="form-control mb-30" placeholder="Your Email">
                 </div>
                 <div class="col-12">
                   <textarea name="message" class="form-control mb-30" placeholder="Your Message"></textarea>
