--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -185,11 +185,8 @@
             <form action="#" method="post">
             {% csrf_token %}
               <div class="row">
-                <div class="col-lg-6">
-                  <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Name">
-                </div>
-                <div class="col-lg-6">
-                  <input type="text" name="message-name1" class="form-control mb-30" placeholder="Your Email">
+                <div class="col-lg-12">
+                  <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Email">
                 </div>
                 <div class="col-12">
                   <textarea name="message" class="form-control mb-30" placeholder="Your Message"></textarea>
