--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -139,8 +139,8 @@
   <br>
   <!-- ***** Breadcrumb Area End ***** -->
  
-{% if message_email %}
-<h3 class="text-center">Thanks {{ message_email }}.</h3>
+{% if message_name %}
+<h3 class="text-center">Thanks {{ message_name }} </h3>
 <br>
 <h2 class="text-center">We recived your email and will contact you shortly.</h2>
 {% endif %}
