--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -138,13 +138,6 @@
   </div>
   <br>
   <!-- ***** Breadcrumb Area End ***** -->
- 
-{% if message_name %}
-<h3 class="text-center">Thanks {{ message_name }} </h3>
-<br>
-<h2 class="text-center">We recived your email and will contact you shortly.</h2>
-{% endif %}
-<br>
   <!-- ***** Contact Area Start ***** -->
   <section class="dento-contact-area mt-50 mb-100">
     <div class="container">
@@ -182,7 +175,7 @@
               <div class="line"></div>
             </div>
             <!-- Form -->
-            <form action="#" method="post">
+            <form id= "myForm" action="#" method="post">
             {% csrf_token %}
               <div class="row">
                 <div class="col-lg-6">
@@ -322,6 +315,16 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <!-- Active js -->
   <script src="{% static 'website/js/default-assets/active.js' %}"></script>
 
+<script>
+   const myForm = document.getElementById("myForm");
+   myForm.addEventListener("submit", (e) => {
+       e.preventDefault();
+
+       alert("Thanks, we received your email and will contact you shortly.")
+
+   })
+
+</script>
 </body>
 
 </html>
