--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -138,7 +138,13 @@
   </div>
   <br>
   <!-- ***** Breadcrumb Area End ***** -->
-
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}> {{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
   <!-- ***** Contact Area Start ***** -->
   <section class="dento-contact-area mt-50 mb-100">
     <div class="container">
