--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -139,9 +139,10 @@
   <br>
   <!-- ***** Breadcrumb Area End ***** -->
 {% if messages %}
-<ul class="messages text-center">
+<ul class="messages text-center" style="color:green">
     {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+    {{ message_name }} {{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
