--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -139,9 +139,9 @@
   <br>
   <!-- ***** Breadcrumb Area End ***** -->
 {% if messages %}
-<ul class="messages text-center">
+<ul class="messages text-center text-info">
     {% for message in messages %}
-    <li class="text-info" if message.tags %} class="{{ message.tags }}"{% endif %}>
+    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
     {{ message_name }} {{ message }}</li>
     {% endfor %}
 </ul>
