--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -661,7 +661,7 @@
 <ul class="messages text-center text-info">
     {% for message in messages %}
     <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-     {{ messages.info }}</li>
+     {{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
