--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -142,7 +142,7 @@
 <ul class="messages text-center text-info">
     {% for message in messages %}
     <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-     {{ messages.success }}</li>
+    {{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
