--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -111,7 +111,14 @@
     </div>
   </header>
   <!-- ***** Header Area End ***** -->
-
+{% if messages %}
+<ul class="messages text-center text-info">
+    {% for message in messages %}
+    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+     {{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
   <!-- ***** Breadcrumb Area Start ***** -->
   <div class="breadcumb-area bg-img bg-gradient-overlay" style="background-image: url({% static 'website/img/bg-img/12.jpg' %});">
     <div class="container h-100">
