--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -183,14 +183,11 @@
               <div class="line"></div>
             </div>
             <!-- Form -->
-
-
-
             <form action="#" method="post">
             {% csrf_token %}
               <div class="row">
                 <div class="col-lg-6">
-                  <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Name">
+                  <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Full Name">
                 </div>
                 <div class="col-lg-6">
                   <input type="email" name="message-email" class="form-control mb-30" placeholder="Your Email">
