--- a/website/templates/service.html
+++ b/website/templates/service.html
@@ -349,12 +349,14 @@
             <p>We will send out weekly newest article and some great offers</p>
             <!-- Newsletter Form -->
             <div class="footer-newsletter-form">
+             
               <form action="#" method="post">
-                <input type="email" name="nl-email" value="" placeholder="Email Address">
+              {% csrf_token %}
+                <input type="email" name="message-email" value="" placeholder="Email Address">
                 <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
               </form>
             </div>
-
+            
             <!-- Social Info -->
             <div class="footer-social-info">
               <a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
