--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -100,8 +100,8 @@
               <!-- Nav End -->
             </div>
 
-            <!-- Booking Now Button -->
-            
+               <!-- Booking Now Button -->
+            <a href="{% url 'contact' %}" class="btn dento-btn booking-btn">Booking By Email</a>
           </nav>
         </div>
       </div>
@@ -461,7 +461,10 @@
           <div class="copywrite-content">
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+<br>
+<p class="text-center">Back-End developed by: oliver.nad@gmail.com</p>
           </div>
         </div>
       </div>
