--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -102,9 +102,8 @@
               </div>
               <!-- Nav End -->
             </div>
-
-            <!-- Booking Now Button -->
-            <a href="#" class="btn dento-btn booking-btn">Booking Now</a>
+        <!-- Booking Now Button -->
+            <a href="{% url 'contact' %}" class="btn dento-btn booking-btn">Booking By Email</a>
           </nav>
         </div>
       </div>
@@ -179,7 +178,7 @@
           <div class="contact-form">
             <!-- Section Heading -->
             <div class="section-heading">
-              <h2>Get In Touch </h2>
+              <h2>Book Your Visit or Contact Us</h2>
               <div class="line"></div>
             </div>
             <!-- Form -->
@@ -296,6 +295,8 @@
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+<br>
+<p class="text-center">Back-End developed by: oliver.nad@gmail.com</p>
           </div>
         </div>
       </div>
