--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -125,11 +125,11 @@
             <div class="col-12">     
               <!-- Welcome Text -->
               <div class="welcome-text text-center">
-                <h2 data-animation="fadeInUp" data-delay="100ms">Want to have a page like this, contact me on my email, thanks Oliver</h2>
+                <h2 data-animation="fadeInUp" data-delay="100ms">Want to have a page like this, contact me on my email: oliver.nad@gmail.com, thanks Oliver</h2>
                 <p data-animation="fadeInUp" data-delay="300ms">As a recent Graduate Student at Code Institute Dublin, as Full Stack Web Developer - University Credit-Rated Diploma, I offer web app solutions for your needs...</p>
                 <div class="welcome-btn-group">
-                  <a href="#" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="500ms">Get Started</a>
-                  <a href="#" class="btn dento-btn mx-2 active" data-animation="fadeInUp" data-delay="700ms">Contact Us</a>
+                  <a href="#" class="btn dento-btn mx-2" data-animation="fadeInUp" data-delay="1500ms">Get Started</a>
+                  <a href="{% url 'contact' %}" class="btn dento-btn mx-2 active" data-animation="fadeInUp" data-delay="1500ms">Contact Me</a>
                 </div>
               </div>
             </div>
