--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Title -->
-  <title>Dr. Oliver Nad</title>
+  <title>Want Beautiful Smile?</title>
 
   <!-- Favicon -->
   <link rel="icon" href="{% static 'website/img/core-img/favicon.ico' %}">
