--- a/website/templates/pricing.html
+++ b/website/templates/pricing.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Title -->
-  <title>Dento - Dentist &amp; Medical HTML Template</title>
+   <title>Want Beautiful Smile?</title>
 
   <!-- Favicon -->
   <link rel="icon" href="./img/core-img/favicon.ico">
@@ -36,8 +36,8 @@
           <!-- Top Content -->
           <div class="col-6 col-md-9 col-lg-8">
             <div class="top-header-content">
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="28 Jackson Street, Chicago, 7788569 USA"><i class="fa fa-map-marker"></i> <span>28 Jackson Street, Chicago, 7788569 USA</span></a>
-              <a href="#" data-toggle="tooltip" data-placement="bottom" title="info.dento@gmail.com"><i class="fa fa-envelope"></i> <span>info.dento@gmail.com</span></a>
+              <a href="#" data-toggle="tooltip" data-placement="bottom" title="Ryland Road, Bunclody, Co.Wexford, Ireland"><i class="fa fa-map-marker"></i> <span>Ryland Road, Bunclody, Co.Wexford, Ireland</span></a>
+              <a href="#" data-toggle="tooltip" data-placement="bottom" title="oliver.nad@gmail.com"><i class="fa fa-envelope"></i> <span>oliver.nad@gmail.com</span></a>
             </div>
           </div>
           <!-- Top Header Social Info -->
@@ -287,9 +287,9 @@
             <a href="{% url 'home' %}" class="d-block mb-4"><img src="{% static 'website/img/core-img/logo.png' %}/img/core-img/logo.png" alt=""></a>
             <p>Etiam sutor risus, dapibus act elefend katen, lacinia sitamet denim. Mauris sagittis kansa interdum dignissim.</p>
             <div class="footer-contact">
-              <p><i class="icon_pin"></i> 28 Jackson Street, Chicago, 7788569 USA</p>
-              <p><i class="icon_phone"></i> +84. 2252. 2250. 122</p>
-              <p><i class="icon_mail"></i> info.dento@gmail.com</p>
+              <p><i class="icon_pin"></i> Ryland Road, Bunclody, Co.Wexford, Ireland</p>
+              <p><i class="icon_phone"></i> 083 888 0758</p>
+              <p><i class="icon_mail"></i> oliver.nad@gmail.com</p>
             </div>
           </div>
         </div>
