--- a/website/templates/service.html
+++ b/website/templates/service.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Title -->
-   <title>Want Beautiful Smile?</title>
+   <title>Want A Beautiful Smile?</title>
 
   <!-- Favicon -->
   <link rel="icon" href="./img/core-img/favicon.ico">
