--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -464,7 +464,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 <br>
-<p class="text-center">Back-End developed by: oliver.nad@gmail.com and ktuk02@gmail.com</p>
+<p class="text-center">Back-End developed by: oliver.nad@gmail.com frontend by ktuk02@gmail.com</p>
           </div>
         </div>
       </div>
